--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "esbuild": "^0.19.4",
+    "motion": "^10.16.4",
     "postcss": "^8.4.31",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
