--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "esbuild": "^0.19.4",
+    "fuse.js": "^6.6.2",
     "motion": "^10.16.4",
     "mustache": "^4.2.0",
     "postcss": "^8.4.31",
