--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "esbuild": "^0.19.4",
+    "lottie-web": "^5.12.2",
     "phlex_ui": "^0.1.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
