--- a/config/database.yml
+++ b/config/database.yml
@@ -15,21 +15,13 @@
 # gem "pg"
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  <% if ENV["DB_HOST"] %>
-  host: <%= ENV["DB_HOST"] %>
-  username: postgres
-  password: postgres
-  <% end %>
-
+  timeout: 5000
 
 development:
   <<: *default
-  database: phlex_components_library_development
+  database: storage/development.sqlite3
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -63,7 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: phlex_components_library_test
+  database: storage/test.sqlite3
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -87,6 +79,4 @@ test:
 #
 production:
   <<: *default
-  database: phlex_components_library_production
-  username: phlex_components_library
-  password: <%= ENV["PHLEX_COMPONENTS_LIBRARY_DATABASE_PASSWORD"] %>
+  database: storage/production.sqlite3
