--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version-file: ".tool-versions"
+          node-version-file: ".node-version"
           cache: yarn
 
       - name: Install dependencies
