--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           heroku_email: "seth@statecert.com"
 
   fly-deploy:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/v1' }}
     needs: [lint, test]
     name: Deploy app
     runs-on: ubuntu-latest
